# ai-driveway-watch

./: .env.example  .gitignore  ACKNOWLEDGEMENTS.md  AGENTS.md  LICENSE  README.md  SECURITY.md  requirements.txt
.github/workflows/: tests.yml
app/: __init__.py  config.py  detector.py  events.py  main.py  pipeline.py
cpp_pi/: CMakeLists.txt  README.md  benchmark.cpp
cpp_pi_ncnn/: CMakeLists.txt  README.md  benchmark.cpp  driveway-watch.service  fetch_qengineering_assets.sh  server.cpp  wildlife-classifier-requirements.txt  wildlife-classifier.service  wildlifeDetector.cpp  wildlifeDetector.h  wildlife_benchmark.cpp  wildlife_classifier.py
docs/: ARCHITECTURE.md  INSTALL_PI.md  ROADMAP.md
prompts/: README.md  add-notification-integration.md  calibrate-zones.md  diagnose-missed-detections.md  getting-started.md
scripts/: run.sh  setup.sh
tests/: test_config.py  test_events.py
